converted grid to flexbox with media queries to avoid grids not being rendered properly on mobile

--- a/client/src/components/Artwork/artwork.scss
+++ b/client/src/components/Artwork/artwork.scss
@@ -4,41 +4,39 @@
   margin: 0 1em;
 }
 .grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: 30px 85px;
-  grid-gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @media only screen and (min-width: 840px) {
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
+    justify-content: start;
+    margin: 3rem;
   }
   h2 {
     text-transform: uppercase;
     font-family: 'Yantramanav', sans-serif;
   }
   .artwork-image__container {
-    width: 100%;
+    width: 400px;
+    height: 400px;
     position: relative;
-    display: grid;
+    @media only screen and (min-width: 840px) {
+      width: 600px;
+      height: 600px;
+    }
 
     img {
-      grid-area: 1 / 1 / 2 / 2;
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
-  .artwork-image__container::before {
-    content: '';
-    padding-bottom: 100%;
-    display: block;
-    grid-area: 1 / 1 / 2 / 2;
-  }
+
   .artwork__info__container {
     display: flex;
     flex-direction: column;
     text-align: left;
     margin: 20px;
-    // font-family: 'Work Sans', sans-serif;
     font-weight: 500;
     .artwork-info__header {
       h2 {
